# glesperance.ynab-split

./: .gitignore  README.md  pyproject.toml  sample.config.yml  sample.env
src/: main.ipynb
src/ynab_split/sheets/: config.py  service.py
src/ynab_split/splitwise/: config.py  service.py
src/ynab_split/sync/: config.py  service.py
src/ynab_split/ynab/: client.py  config.py  schema.py  service.py
