[tool.poetry]
name = "glesperance-ynab-split"
version = "0.1.0"
description = ""
authors = ["Gabriel Lesperance <611342+glesperance@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ynab_split", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pandas = "^2.2.2"
polars = "^1.2.1"
gspread = "^6.1.2"
pyarrow = "^17.0.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
