[project]
name = "glesperance-ynab-split"
version = "0.1.0"
description = ""
authors = [{ name = "Gabriel Lesperance", email = "611342+glesperance@users.noreply.github.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.3.4,<3",
    "ipykernel>=6.29.5,<7",
    "python-dotenv>=1.0.1,<2",
    "httpx>=0.27.0,<0.28",
    "pandas>=2.2.2,<3",
    "polars>=1.2.1,<2",
    "gspread>=6.1.2,<7",
    "pyarrow>=17.0.0,<18",
    "pyyaml>=6.0.1,<7",
    "splitwise>=3.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/ynab_split"]

[tool.hatch.build.targets.wheel]
include = ["src/ynab_split"]

[tool.hatch.build.targets.wheel.sources]
"src/ynab_split" = "ynab_split"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
